feat: finalize v0.7.1 discrepancies